set (project "AdventOfCode2017")
set (CXX_STANDARD 17)

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" AND "${CMAKE_CXX_SIMULATE_ID}" STREQUAL "MSVC")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
else()
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z")
endif()

add_executable(2017-01 2017-01.cpp)
add_executable(2017-02 2017-02.cpp)
add_executable(2017-03 2017-03.cpp)
add_executable(2017-04 2017-04.cpp)
add_executable(2017-05 2017-05.cpp)
add_executable(2017-06 2017-06.cpp)
